test_suite/tests/ui/malformed/cut_off.stderr
error: unexpected end of input, expected literal
 --> $DIR/cut_off.rs:4:17
  |
4 | #[serde(rename =)]
  |                 ^
